# Gentleman

./: gentleman.cabal  stack.yaml
app/: Main.hs
src/: Hitomi.hs  Maru.hs  Marumaru.hs  Sucuri.hs  Types.hs
src/Database/Persist/Postgresql/: Json.hs
src/ROD/: Gentleman.hs
src/ROD/Gentleman/: Types.hs
src/ROD/Gentleman/Database/: Store.hs  Types.hs
src/ROD/Gentleman/Site/: CloudFlare.hs  Hitomi.hs  Marumaru.hs
test/: Spec.hs
