name:                gentleman
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/gentleman#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ROD.Gentleman
                     , ROD.Gentleman.Database.Store
                     , ROD.Gentleman.Database.Types
                     , ROD.Gentleman.Site.CloudFlare
                    --  , ROD.Gentleman.Site.Hitomi
                     , ROD.Gentleman.Site.Marumaru
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , base64-bytestring
                     , bytestring
                     , contravariant
                     , hasql
                     , hasql-pool
                     , html-conduit
                     , http-conduit
                     , monad-control
                     , retry
                     , stringsearch
                     , text
                     , time
                     , unicode-show
                     , utf8-string
                     , xml-conduit
  default-language:    Haskell2010

executable gentleman
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , async
                     , gentleman
                     , monad-control
                     , monad-logger
                     , resourcet
                     , SafeSemaphore
                     , text
                     , unicode-show
  default-language:    Haskell2010

test-suite gentleman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , gentleman
                     , unicode-show
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gentleman
